# exactly-once

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  distribution.cc  distribution.h  docker-compose.yml  handoff.cc  handoff.h  main.cc  monoids.h  simple_test.cc  udp.cc  udp.h
Dockerfiles/: exactly-once  exactly-once-base
include/: distribution.h  handoff.h  monoids.h  peer_service.h  util.h
src/: distribution.cc  main.cc  peer_service.cc
test/: handoff_test.cc  peer_service_test.cc  pumba_test.cc  simple_test.cc
